[gd_scene load_steps=8 format=3 uid="uid://bbnu5q68tebdq"]

[ext_resource type="Script" uid="uid://dxrb3qnov2cnd" path="res://settings.gd" id="1_26ncd"]
[ext_resource type="PackedScene" uid="uid://cbvi7stvm27nc" path="res://scenes/fondo/fondo.tscn" id="2_tt6xx"]
[ext_resource type="FontFile" uid="uid://0nd5mqqmlmh8" path="res://assets/BotsmaticDemo-MXOr.ttf" id="3_1slea"]
[ext_resource type="FontFile" uid="uid://gl5yj4pah2oh" path="res://assets/FlappyBirdRegular-9Pq0.ttf" id="4_1slea"]
[ext_resource type="AudioStream" uid="uid://cn18t55yrbqw7" path="res://assets/sounds/flap.mp3" id="5_v1hle"]

[sub_resource type="LabelSettings" id="LabelSettings_v1hle"]
font = ExtResource("3_1slea")
font_size = 70

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1slea"]
bg_color = Color(0.99607843, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_26ncd")

[node name="Sprite2D" parent="." instance=ExtResource("2_tt6xx")]

[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_right = 1151.0
offset_bottom = 32.0
text = "configuraci√≥n"
label_settings = SubResource("LabelSettings_v1hle")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="MusicContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1slea")
theme_override_font_sizes/font_size = 37
text = "Musica: 80%"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1slea")
theme_override_font_sizes/font_size = 37
text = "SFX: 80%"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 0.8

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1103.0
offset_top = -3.0
offset_right = 1152.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_1slea")
text = "X"

[node name="TestSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v1hle")
bus = &"SFX"
